# cpp-cmake-interop-csharp

./: README.md
cpp/: .gitignore  CMakeLists.txt
cpp/apps/: CMakeLists.txt  app.cpp
cpp/include/utilitydelta-test/: TestClass.hpp
cpp/interop/: CMakeLists.txt  interop.cpp
cpp/src/: CMakeLists.txt  TestClass.cpp
cpp/tests/: CMakeLists.txt  TestCore.cpp
csharp/: UtilityDelta.sln
csharp/UtilityDelta.TestClassTester/: Program.cs  TestClassInterop.cs  UtilityDelta.TestClassTester.csproj
